button hover works. just need to fix safari flicker

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -94,14 +94,13 @@ textarea:focus {
   border-style: solid;
   border-width: 3px;
   border-image: var(--gradient-image) 8 stretch;
-  -webkit-border-image: var(--gradient-image) 8 stretch;
   -webkit-transform: translate3d(0, 0, 0);
   font-family: 'HK Grotesk Bold';
   text-decoration: none;
   color: white;
   padding: 0.667em 1em;
   z-index: 1;
-  transition: 0.3s all;
+  transition: all 0.3s ease;
 }
 .button:before {
   content: '';
@@ -111,9 +110,10 @@ textarea:focus {
   bottom: -3px;
   left: -3px;
   border-image: var(--gradient-image) 8 fill;
+  -webkit-transform: translate3d(0, 0, 0);
   opacity: 0;
   z-index: -1;
-  transition: 0.3s all;
+  transition: all 0.3s ease;
 }
 .button:hover,
 .button:active {
@@ -122,23 +122,7 @@ textarea:focus {
 }
 .button:hover:before,
 .button:active:before {
-  -webkit-border-image: var(--gradient-image) 8 fill;
-  -webkit-transform: translate3d(0, 0, 0);
   opacity: 1;
-}
-/* Chrome 29+ */
-@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
-  .button:hover:before,
-  .button:active:before {
-    inset: 0;
-  }
-}
-/* Chrome 22-28 */
-@media screen and(-webkit-min-device-pixel-ratio:0) {
-  .button:hover:before,
-  .button:active:before {
-    inset: 0;
-  }
 }
 
 /* Section Title */
